--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "git": "https://github.com/CarbonCollins"
   },
   "dependencies": {
-    "openraildata-common": "^1.7.0",
+    "openraildata-common": "git+https://github.com/felamaslen/openraildata-common-nodejs.git",
     "stompit": "^0.25.0",
     "xml2json": "^0.11.0"
   },
